# Matrix-Implementation

./: .clang-format  .gitignore  Algorithms.md  CMakeLists.txt  Matrix.cpp  Readme.md  diagram.md  graph.py
app/: CMakeLists.txt  basics.cpp  basics2.cpp  mtp-benchmark.cpp  mtp-demo.cpp
include/: Algorithms.hpp  Generator.hpp  Matrix.hpp  MatrixBase.hpp  MatrixExceptions.hpp  MatrixView.hpp  Matrix_types.hpp  Matrixv2.hpp
src/: CMakeLists.txt  Matrix.cpp  MatrixBase.cpp  MatrixExceptions.cpp
tests/: CMakeLists.txt  test_matrix.cpp
