include(FetchContent)

FetchContent_Declare(
  googletest
  GIT_REPOSITORY https://github.com/google/googletest.git
  GIT_TAG        v1.14.0
)

FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)

add_executable(test_matrix test_matrix.cpp)

target_link_libraries(test_matrix PRIVATE GTest::GTest MatrixLib)

add_test(gtest_matrix test_matrix)